--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 <body>
     <section id='start-screen'>
         <img src="assets/friends-logo.png" alt="img not found">
-        <button class='start-button' id='easy-button'  >Easy</button>
-        <button class='start-button' id='medium-button'>Medium</button>
-        <button class='start-button' id='hard-button'  >Hard</button>
+        <button class='button' id='easy-button'  >Easy</button>
+        <button class='button' id='medium-button'>Medium</button>
+        <button class='button' id='hard-button'  >Hard</button>
     </section>
     <div class='hide' id='game-screen'>
-        <h3 id='question'>Question:</h3>
+        <img id='question-image' alt="question img">
+        <h3 id='question'></h3>
         <section id='buttons'>
-            <button class='button' id='button-1'>Button 1</button>
-            <button class='button' id='button-2'>Button 2</button>
-            <button class='button' id='button-3'>Button 3</button>
-            <button class='button' id='button-4'>Button 4</button>
+            <button class='response' id='response-1'>1</button>
+            <button class='response' id='response-2'>2</button>
+            <button class='response' id='response-3'>3</button>
+            <button class='response' id='response-4'>4</button>
         </section>
     </div>
     <section id='game-over-screen'>
