--- a/index.html
+++ b/index.html
@@ -10,19 +10,27 @@
 <body>
     <section id='start-screen'>
         <img src="assets/friends-logo.png" alt="img not found">
-        <button class='button' id='easy-button'  >Easy</button>
-        <button class='button' id='medium-button'>Medium</button>
-        <button class='button' id='hard-button'  >Hard</button>
+        <button class='button' id='easy-button'  >Start</button>
+        <!-- <button class='button' id='medium-button'>Medium</button>
+        <button class='button' id='hard-button'  >Hard</button> -->
     </section>
+    <div class='hide' id=''>
+        <p id='counter'>0</p>
+        <p id='timer'>0:00</p>
+    </div>
     <div class='hide' id='game-screen'>
         <img id='question-image' alt="question img">
         <h3 id='question'></h3>
-        <section id='buttons'>
-            <button class='response' id='response-1'>1</button>
-            <button class='response' id='response-2'>2</button>
-            <button class='response' id='response-3'>3</button>
-            <button class='response' id='response-4'>4</button>
-        </section>
+        <div id='responses'>
+            <button class="direction" id='back-button'>&#5130</button>
+            <section id='buttons'>
+                <button class='response' id='response-1'>1</button>
+                <button class='response' id='response-2'>2</button>
+                <button class='response' id='response-3'>3</button>
+                <button class='response' id='response-4'>4</button>
+            </section>
+            <button class="direction" id='next-button'>&#5125</button>
+        </div>
     </div>
     <section id='game-over-screen'>
 
