minor HTML changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Friends Trivia</title>
 </head>
 <body>
     <section id='start-screen'>
@@ -14,7 +14,7 @@
         <!-- <button class='button' id='medium-button'>Medium</button>
         <button class='button' id='hard-button'  >Hard</button> -->
     </section>
-    <div class='hide' id=''>
+    <div class='hide' id='game-stats'>
         <p id='counter'>0</p>
         <p id='timer'>0:00</p>
     </div>
