--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
     <section id='start-screen'>
         <img src="assets/friends-logo.png" alt="img not found">
-        <button class='button' id='easy-button'  >Start</button>
-        <!-- <button class='button' id='medium-button'>Medium</button>
-        <button class='button' id='hard-button'  >Hard</button> -->
+        <button class='button' id='start-button'  >Start</button>
     </section>
     <div class='hide' id='game-stats'>
         <p id='counter'>0</p>
@@ -24,10 +22,10 @@
         <div id='responses'>
             <button class="direction" id='back-button'>&#5130</button>
             <section id='buttons'>
-                <button class='response' id='response-1'>1</button>
-                <button class='response' id='response-2'>2</button>
-                <button class='response' id='response-3'>3</button>
-                <button class='response' id='response-4'>4</button>
+                <button class='response' value='0' id='response-1'>1</button>
+                <button class='response' value='1' id='response-2'>2</button>
+                <button class='response' value='2' id='response-3'>3</button>
+                <button class='response' value='3' id='response-4'>4</button>
             </section>
             <button class="direction" id='next-button'>&#5125</button>
         </div>
